--- a/Proyecto/src/proyecto/Anaerobia.form
+++ b/Proyecto/src/proyecto/Anaerobia.form
@@ -2,8 +2,8 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="enabled" type="boolean" value="false"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="title" type="java.lang.String" value="Respiracion Anaerobia"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -30,18 +30,23 @@
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane2" min="-2" pref="334" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" min="-2" pref="334" max="-2" attributes="0"/>
+                          <Component id="jScrollPane2" alignment="0" min="-2" pref="334" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" alignment="0" min="-2" pref="334" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="lblImagen3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" pref="393" max="-2" attributes="0"/>
+                      <Component id="lblAnaerobia" min="-2" pref="393" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -50,20 +55,20 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="41" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
+              <Component id="lblAnaerobia" min="-2" pref="41" max="-2" attributes="0"/>
+              <EmptySpace pref="9" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="151" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="lblImagen3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
@@ -79,13 +84,16 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="jTextArea1">
+        <Component class="javax.swing.JTextArea" name="txtAnaerobia">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Times New Roman" size="14" style="0"/>
+            </Property>
             <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="El aceptor final de electrones es una mol&#xe9;cula inorg&#xe1;nica distinta &#xa;del ox&#xed;geno, m&#xe1;s raramente una&#xa;mol&#xe9;cula org&#xe1;nica. Es un tipo de metabolismo muy com&#xfa;n en muchos microorganismos, especialmente &#xa;procariotas. No debe confundirse &#xa;con la fermentaci&#xf3;n, proceso &#xa;tambi&#xe9;n anaer&#xf3;bico, pero en el queno interviene nada parecido a unacadena transportadora de &#xa;electrones. "/>
+            <Property name="text" type="java.lang.String" value="Anaer&#xf3;bica: Debido a que la gluc&#xf3;lisis no utiliza ox&#xed;geno, el proceso se considera anaer&#xf3;bico y para ciertos organismos anaerobios, como algunas bacterias y levaduras, la gluc&#xf3;lisis es la &#xfa;nica fuente de energ&#xed;a.&#xa;&#xa;C&#xf3;mo las c&#xe9;lulas extraen energ&#xed;a de la glucosa en ausencia de ox&#xed;geno. En levaduras, las reacciones anaer&#xf3;bicas producen alcohol, mientras que en tus m&#xfa;sculos, forman &#xe1;cido l&#xe1;ctico.  "/>
             <Property name="wrapStyleWord" type="boolean" value="true"/>
           </Properties>
         </Component>
@@ -93,13 +101,19 @@
     </Container>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Times New Roman" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Regresar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="lblAnaerobia">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Times New Roman" size="24" style="0"/>
+          <Font name="Times New Roman" size="36" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Anaerobia"/>
@@ -112,18 +126,21 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="jTextArea2">
+        <Component class="javax.swing.JTextArea" name="txtAnaerobia2">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Times New Roman" size="14" style="0"/>
+            </Property>
             <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="C&#xf3;mo las c&#xe9;lulas extraen energ&#xed;a de la glucosa en ausencia de ox&#xed;geno. En levaduras, las reacciones anaer&#xf3;bicas producen alcohol, mientras que en tus m&#xfa;sculos, forman &#xe1;cido l&#xe1;ctico. "/>
+            <Property name="text" type="java.lang.String" value="Hay dos tipos comunes de respiraci&#xf3;n celular anaer&#xf3;bica: fermentaci&#xf3;n l&#xe1;ctica y fermentaci&#xf3;n alcoh&#xf3;lica .&#xa;&#xa;Fermentaci&#xf3;n alcoh&#xf3;lica &#xa;&#xa;El &#xe1;cido pir&#xfa;vico formado en la gluc&#xf3;lisis se convierte anaer&#xf3;bicamente en etanol. En el primer caso se libera di&#xf3;xido de carbono, y en el segundo se oxida el NADH y se reduce a acetaldeh&#xed;do.&#xa;&#xa;Otras c&#xe9;lulas, como por ejemplo los gl&#xf3;bulos rojos, las c&#xe9;lulas musculares y algunos microorganismos transforman el &#xe1;cido Pir&#xfa;vico en &#xe1;cido l&#xe1;ctico.&#xa;&#xa;En el caso de las c&#xe9;lulas musculares, la fermentaci&#xf3;n l&#xe1;ctica, se produce como resultado de ejercicios extenuantes durante los cuales el aporte de ox&#xed;geno no alcanza a cubrir las necesidades del metabolismo celular. La acumulaci&#xf3;n del &#xe1;cido l&#xe1;ctico en estas c&#xe9;lulas produce la sensaci&#xf3;n de cansancio muscular que muchas veces acompa&#xf1;a a esos ejercicios.&#xa;&#xa;Fermentaci&#xf3;n l&#xe1;ctica&#xa;&#xa;En esta reacci&#xf3;n el NADH se oxida y el &#xe1;cido pir&#xfa;vico se reduce transform&#xe1;ndose en &#xe1;cido lactico.&#xa;&#xa;La fermentaci&#xf3;n sea esta alcoh&#xf3;lica o&#xa;l&#xe1;ctica ocurre en el citoplasma.&#xa;&#xa;"/>
             <Property name="wrapStyleWord" type="boolean" value="true"/>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="lblImagen3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/Imagenes/imagen4.PNG"/>
