--- a/Proyecto/src/proyecto/Productos.form
+++ b/Proyecto/src/proyecto/Productos.form
@@ -2,8 +2,11 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="enabled" type="boolean" value="false"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="title" type="java.lang.String" value="Procesos para los productos "/>
+    <Property name="alwaysOnTop" type="boolean" value="true"/>
+    <Property name="focusTraversalPolicyProvider" type="boolean" value="true"/>
+    <Property name="focusable" type="boolean" value="false"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -25,21 +28,23 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-              <Component id="btnAerobia" min="-2" pref="87" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-              <Component id="btnAnaerobia" min="-2" pref="98" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-              <Component id="btnAtp" min="-2" pref="92" max="-2" attributes="0"/>
-              <EmptySpace pref="63" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                      <Component id="btnAerobia" min="-2" pref="87" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="btnAnaerobia" min="-2" pref="98" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="btnAtp" min="-2" pref="92" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btnRegreso" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                  </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="8" pref="8" max="-2" attributes="0"/>
-                      <Component id="lblProcesos" max="32767" attributes="0"/>
+                      <Component id="lblProcesos" pref="457" max="32767" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" max="32767" attributes="0"/>
               </Group>
@@ -51,14 +56,22 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="lblProcesos" max="32767" attributes="0"/>
+              <Component id="lblProcesos" pref="46" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="228" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="btnAerobia" pref="34" max="32767" attributes="0"/>
-                  <Component id="btnAnaerobia" max="32767" attributes="0"/>
-                  <Component id="btnAtp" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="209" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="btnRegreso" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnAtp" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="btnAnaerobia" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="btnAerobia" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -82,7 +95,7 @@
             </Property>
             <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="&#xb7; Glucolisis: Ocurre en el citoplasma, se rompen los enlaces qu&#xed;micos de la glucosa y libera energ&#xed;a, la glucosa formada por 6 &#xe1;tomos se rompe por la mitad y se forman dos compuestos de 3 carbonos cada uno: Acido Pir&#xfa;bico.&#xa;&#xa;&#xb7; Ciclo de Krebs: Durante este proceso un compuesto formado por dos carbonos, el acetilo, se degrada completamente uni&#xe9;ndose a un compuesto de 4 &#xe1;tomos de carbono formando as&#xed; otro compuesto de 6. Luego este pierde un carbono y se forma uno de 5. Despu&#xe9;s de esto se pierde otro carbono y se degrada completamente formando dos mol&#xe9;culas de di&#xf3;xido de carbono. En este proceso hay liberaci&#xf3;n de energ&#xed;a.&#xa;&#xa;&#xb7; La cadena respiratoria: Como resultado de la gluc&#xf3;lisis y el ciclo de Krebs la glucosa se divide y forma mol&#xe9;culas de CO2 liberando energ&#xed;a para la formaci&#xf3;n de ATP y &#xe1;tomos de hidr&#xf3;geno. Los &#xe1;tomos de hidr&#xf3;geno provenientes de las etapas anteriores se combinan con el ox&#xed;geno para formar agua. Adem&#xe1;s de gran cantidad de energ&#xed;a que sirve para formar 36 mol&#xe9;culas de ATP. "/>
+            <Property name="text" type="java.lang.String" value="Tipos de respiraci&#xf3;n celular&#xa;&#xa;&#xb7; Respiraci&#xf3;n aer&#xf3;bica ocurre en las mitocondrias. El aceptor final de electrones es el ox&#xed;geno molecular, que se reduce a agua. La realizan la inmensa mayor&#xed;a de organismos, incluidos los humanos. Los organismos que llevan a cabo este tipo de respiraci&#xf3;n reciben el nombre de organismos aer&#xf3;bicos.&#xa;&#xa;&#xb7; Respiraci&#xf3;n anaer&#xf3;bica (fermentaci&#xf3;n) y ocurre en el citoplasma.  El aceptor final de electrones es una mol&#xe9;cula inorg&#xe1;nica distinta del ox&#xed;geno, m&#xe1;s raramente una mol&#xe9;cula org&#xe1;nica. Es un tipo de metabolismo muy com&#xfa;n en muchos microorganismos, especialmente procariotas. No debe confundirse con la fermentaci&#xf3;n, proceso tambi&#xe9;n anaer&#xf3;bico, pero en el que no interviene nada parecido a una cadena transportadora de electrones. &#xa;&#xa;"/>
             <Property name="wrapStyleWord" type="boolean" value="true"/>
           </Properties>
         </Component>
@@ -92,6 +105,9 @@
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="18" style="0"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="PROCESO PARA LOS PRODUCTOS"/>
@@ -104,6 +120,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Aerobia"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAerobiaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnAnaerobia">
       <Properties>
@@ -112,6 +131,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Anaerobia"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAnaerobiaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnAtp">
       <Properties>
@@ -120,6 +142,17 @@
         </Property>
         <Property name="text" type="java.lang.String" value="ATP"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAtpActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnRegreso">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Regreso"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegresoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
