--- a/Proyecto/src/proyecto/Actividad.form
+++ b/Proyecto/src/proyecto/Actividad.form
@@ -55,7 +55,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="chkP3r1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="4" max="32767" attributes="0"/>
                       <Component id="chkP3r2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="chkP3r3" min="-2" max="-2" attributes="0"/>
@@ -78,7 +78,7 @@
                   </Group>
                   <Component id="lblImagen3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
