--- a/Proyecto/src/proyecto/Definicion.form
+++ b/Proyecto/src/proyecto/Definicion.form
@@ -74,7 +74,7 @@
             </Property>
             <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="&#xa;La respiraci&#xf3;n celular es el conjunto de reacciones &#xa;bioqu&#xed;mica por las cuales determinados compuestos org&#xe1;nicos son degradados completamente, por &#xa;oxidaci&#xf3;n, hasta convertirse en sustancias inorg&#xe1;nicasproceso que proporciona energ&#xed;a aprovechable,&#xa;la c&#xe9;lula de esto provienen algunos de los productos y uno de los principales productos es el ATP."/>
+            <Property name="text" type="java.lang.String" value="&#xa;La respiraci&#xf3;n celular es el conjunto de reacciones bioqu&#xed;mica por las cuales determinados compuestos org&#xe1;nicos son degradados completamente, por oxidaci&#xf3;n, hasta convertirse en sustancias inorg&#xe1;nicasproceso que proporciona energ&#xed;a aprovechable,&#xa;la c&#xe9;lula de esto provienen algunos de los productos y uno de los principales productos es el ATP."/>
             <Property name="wrapStyleWord" type="boolean" value="true"/>
             <Property name="autoscrolls" type="boolean" value="false"/>
           </Properties>
